--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
 }
 
-
 .App {
   height:100vh;
   display: grid;
@@ -18,9 +17,26 @@
   background-color: red;
   color: white;
   grid-area: acc;
-  display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+.userDetails {
+  padding-top: 15%;
+  width: 100%;
+  height: 100%;
+}
+
+.AccountButton-container img {
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.AccountButton-container p {
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .Header-container {
@@ -44,6 +60,7 @@
   padding: 10px;
   text-align: center;
   /* box-shadow: 0px 0px 10px grey; */
+  /* box-shadow: rgba(0, 0, 0, 0.25) 1.95px 0px 2.6px; */
 }
 .NavBar-container button {
   margin-top: 8px;
@@ -83,6 +100,7 @@
   grid-template-areas: '. content sidebar .';
   grid-template-columns: 0.5fr 1.3fr 1fr 0.5fr ;
   align-items: center;
+  /* box-shadow: rgba(0, 0, 0, 0.25) inset 1px 0px 5px; */
 }
 
 .MainContent-content {
@@ -132,5 +150,9 @@ p {
     width: 18%;
     margin: 0px 0.25rem 0px 0.25rem;
     padding: 10px 0.25rem 10px 0.25rem;
+  }
+
+  .userDetails {
+    padding-top: 7%;
   }
 }
