--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -125,6 +127,19 @@
 p {
   padding: 0;
   margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding: 20px;
+  background-color: white;
+  /* margin-bottom: 10px; */
+  margin: 0px 2.5% 10px 2.5%;
+  box-shadow: rgba(0, 0, 0, 0.25) 1px 0px 5px;
+  min-height: 100px;
 }
 
 
