--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ li {
   height: auto;
   border-radius: 0.5rem;
   justify-self: center;
+  margin-bottom: 5px;
 }
 
 .reviews-card h3 {
@@ -162,6 +163,10 @@ li {
   text-align: left;
   margin-left: 10%;
   color: black;
+}
+
+.reviews-card h3:hover {
+  text-decoration: underline;
 }
 
 .reviews-card {
