--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,62 @@ li {
   grid-area: votes;
 }
 
+.createReview-card {
+  list-style: none;
+}
+.createReview-card h2 {
+  /* grid-area: title; */
+  color:rgb(26, 26, 26);
+  margin-bottom: 2px;
+}
+.createReview-card p {
+  margin-bottom: 5px;
+}
+.createReview-card form {
+  display: block;
+}
+.createReview-card input {
+  width: 100%;
+  padding: 10px;
+  border: 0;
+  border-bottom: 1px solid lightgrey;
+  margin-bottom: 2px;
+  color: #333333;
+}
+.createReview-card__body {
+  height:200px;
+  width: 100%;
+  padding: 10px;
+  border: 0;
+  border-bottom: 1px solid lightgrey;
+  margin-bottom: 2px;
+  color: #333333;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  font-size: 0.85rem;
+  resize: none;
+}
+.createReview-card ::placeholder {
+  color:lightslategrey;
+}
+.createReview-card button {
+  margin-top: 8px;
+  margin-bottom: 4px;
+  background-color: black;
+  border: 1px solid black;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  width: 70px;
+  border-radius: 4px;
+}
+.createReview-card__img {
+  grid-area: img;
+  width: 100%;
+  margin: 1rem 0 1rem 0;  
+}
+
 
 @media screen and (max-width: 600px) {
   .App {
