--- a/src/App.css
+++ b/src/App.css
@@ -1,343 +1,390 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-.App {
-  height:100vh;
-  display: grid;
-  grid-template-columns: 150px 1fr;
-  grid-template-rows: 100px 1fr;
-  grid-template-areas: 
-  'acc header'
-  'navbar main-content';
-}
-
-.AccountButton-container {
-  /* border: 5px solid green; */
-  background-color: red;
-  color: white;
-  grid-area: acc;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.userDetails {
-  padding-top: 15%;
-  width: 100%;
-  height: 100%;
-}
-
-.AccountButton-container img {
-  height: 40px;
-  border-radius: 50%;
-  border: 1px solid black;
-}
-
-.AccountButton-container p {
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.Header-container {
-  /* border: 5px solid purple; */
-  background-color: red;
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-  grid-area: header;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.NavBar-container {
-  /* border: 5px solid teal; */
-  background-color: lightgrey;
-  grid-area: navbar;
-  display: block;
-  padding: 10px;
-  text-align: center;
-  /* box-shadow: 0px 0px 10px grey; */
-  /* box-shadow: rgba(0, 0, 0, 0.25) 1.95px 0px 2.6px; */
-}
-.NavBar-container button {
-  margin-top: 8px;
-  margin-bottom: 4px;
-  background-color: black;
-  border: 1px solid black;
-  color: white;
-  padding: 10px;
-  cursor: pointer;
-  width: 90%;
-  border-radius: 4px;
-}
-.NavBar-container button:hover {
-  background-color: grey;
-}
-
-.NavBar-container button:active {
-  background-color: lightgrey;
-}
-
-/* .MainContent-container {
-  border: 5px solid yellow;
-  background-color: whitesmoke;
-  grid-area: main-content;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-} */
-
-.MainContent-container {
-  /* border: 5px solid yellow; */
-  background-color: whitesmoke;
-  grid-area: main-content;
-  display: grid;
-  grid-template-areas: '. content sidebar .';
-  grid-template-columns: 0.5fr 1.3fr 1fr 0.5fr ;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.25) inset 1px 0px 5px;
-}
-
-.MainContent-content {
-  /* border: 5px solid lime; */
-  grid-area: content;
-  min-width: 400px;
-  height: 100%;
-  text-align: center;
-  padding: 5%;
-}
-
-.sidebar {
-  /* border: 5px solid blue; */
-  grid-area: sidebar;
-  min-width: 250px;
-  max-width: 450px;
-  height: 100%;
-  text-align: center;
-  padding: 5%;
-}
-
-p {
-  padding: 0;
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-li {
-  padding: 20px;
-  background-color: white;
-  margin: 0px 2.5% 10px 2.5%;
-  box-shadow: rgba(0, 0, 0, 0.25) 1px 0px 5px;
-  min-height: 100px;
-  /* height: 15vw; */
-  font-size: 0.85rem;
-  color: rgb(114, 114, 114);
-}
-
-.reviews-card__img {
-  grid-area: img;
-  width: 100%;
-  height: auto;
-  border-radius: 0.5rem;
-  justify-self: center;
-  margin-bottom: 5px;
-}
-
-.reviews-card h3 {
-  grid-area: title;
-  text-align: left;
-  margin-left: 10%;
-  color: black;
-}
-
-.reviews-card h3:hover {
-  text-decoration: underline;
-}
-
-.reviews-card {
-  display: grid;
-  grid-template-areas: 'img title title' 'meta . votes' 'date . votes';
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 20% 1fr 1fr;
-}
-
-.reviews-card__date {
-  grid-area: date;
-}
-
-.reviews-card__votes {
-  grid-area: votes;
-  font-size: 1rem;
-  text-align: end;
-}
-
-.votesCount {
-  color: black;
-  font-size: 2rem;
-}
-
-.category-title {
-  text-transform: capitalize;
-  margin-bottom: 5px;
-  color: black;
-}
-
-.singleReview-card {
-  list-style: none;
-  /* display: 'grid';
-  grid-template-areas: 
-  'title title votes' 
-  'userDetails . gameDetails' 
-  'img img img' 
-  'body body body'; */
-}
-.singleReview-card h2 {
-  grid-area: title;
-  color:rgb(26, 26, 26)
-}
-.singleReview-card__votes {
-  grid-area: votes;
-}
-.singleReview-card__img {
-  grid-area: img;
-  width: 100%;
-  margin: 1rem 0 1rem 0;  
-}
-
-.commentsSection {
-  list-style: none;
-}
-.commentsSection h3 {
-  padding-bottom: 5px;
-  border-bottom: 1px solid lightgrey;
-}
-
-.oneComment {
-  display: grid;
-  grid-template-areas: 'details votes' 'body votes';
-  border-bottom: 1px solid whitesmoke;
-  padding: 10px 0 10px 0;
-  text-align: left;
-}
-.oneComment__nameDate {
-  grid-area: details;
-  font-size: 0.75rem;
-  margin-bottom: 5px;
-}
-.oneComment__body {
-  grid-area: body;
-}
-.onceComment__votes {
-  grid-area: votes;
-}
-
-.createReview-card {
-  list-style: none;
-}
-.createReview-card h2 {
-  /* grid-area: title; */
-  color:rgb(26, 26, 26);
-  margin-bottom: 2px;
-}
-.createReview-card p {
-  margin-bottom: 5px;
-}
-.createReview-card form {
-  display: block;
-}
-.createReview-card input {
-  width: 100%;
-  padding: 10px;
-  border: 0;
-  border-bottom: 1px solid lightgrey;
-  margin-bottom: 2px;
-  color: #333333;
-  text-align: left;
-}
-.createReview-card select{
-  width: 100%;
-  padding: 10px;
-  border: 0;
-  /* border-bottom: 1px solid lightgrey; */
-  margin-bottom: 2px;
-  color: lightslategrey;
-  opacity: 0.55;
-}
-.createReview-card__body {
-  height:200px;
-  width: 100%;
-  padding: 10px;
-  border: 0;
-  border-bottom: 1px solid lightgrey;
-  border-top: 1px solid lightgrey;
-  margin-bottom: 2px;
-  color: #333333;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  font-size: 0.85rem;
-  resize: none;
-}
-.createReview-card ::placeholder {
-  color:lightslategrey;
-}
-.createReview-card button {
-  margin-top: 8px;
-  margin-bottom: 4px;
-  background-color: black;
-  border: 1px solid black;
-  color: white;
-  padding: 10px;
-  cursor: pointer;
-  width: 70px;
-  border-radius: 4px;
-}
-.createReview-card__img {
-  grid-area: img;
-  width: 100%;
-  margin: 1rem 0 1rem 0;  
-}
-
-
-@media screen and (max-width: 600px) {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  
   .App {
     height:100vh;
     display: grid;
-    grid-template-columns: 1fr 3.5fr;
-    grid-template-rows: 12.5vh 1fr 54px;
+    grid-template-columns: 150px 1fr;
+    grid-template-rows: 100px 1fr;
     grid-template-areas: 
     'acc header'
-    'main-content main-content'
-    'navbar navbar';
+    'navbar main-content';
   }
   
-  .NavBar-container{
-    padding: 8px;
+  .AccountButton-container {
+    /* border: 5px solid green; */
+    background-color: red;
+    color: white;
+    grid-area: acc;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
-
-  .NavBar-container button {
-    /* float: none; */
-    width: 18%;
-    margin: 0px 0.25rem 0px 0.25rem;
-    padding: 10px 0.25rem 10px 0.25rem;
-  }
-
+  
   .userDetails {
-    padding-top: 7%;
+    padding-top: 15%;
+    width: 100%;
+    height: 100%;
   }
-}
+  
+  .AccountButton-container img {
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid black;
+  }
+  
+  .AccountButton-container p {
+    font-size: 0.9rem;
+    font-weight: bold;
+  }
+  
+  .Header-container {
+    /* border: 5px solid purple; */
+    background-color: red;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+  .NavBar-container {
+    /* border: 5px solid teal; */
+    background-color: lightgrey;
+    grid-area: navbar;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    /* box-shadow: 0px 0px 10px grey; */
+    /* box-shadow: rgba(0, 0, 0, 0.25) 1.95px 0px 2.6px; */
+  }
+  .NavBar-container button {
+    margin-top: 8px;
+    margin-bottom: 4px;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    width: 90%;
+    border-radius: 4px;
+  }
+  .NavBar-container button:hover {
+    background-color: grey;
+  }
+  
+  .NavBar-container button:active {
+    background-color: lightgrey;
+  }
+  
+  /* .MainContent-container {
+    border: 5px solid yellow;
+    background-color: whitesmoke;
+    grid-area: main-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  } */
+  
+  .MainContent-container {
+    /* border: 5px solid yellow; */
+    background-color: whitesmoke;
+    grid-area: main-content;
+    display: grid;
+    grid-template-areas: '. content sidebar .';
+    grid-template-columns: 0.5fr 1.3fr 1fr 0.5fr ;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.25) inset 1px 0px 5px;
+  }
+  
+  .MainContent-content {
+    /* border: 5px solid lime; */
+    grid-area: content;
+    min-width: 400px;
+    height: 100%;
+    text-align: center;
+    padding: 5%;
+  }
+  
+  .sidebar {
+    /* border: 5px solid blue; */
+    grid-area: sidebar;
+    min-width: 250px;
+    max-width: 450px;
+    height: 100%;
+    text-align: center;
+    padding: 5%;
+  }
+  
+  p {
+    padding: 0;
+    margin: 0;
+  }
+  
+  ul {
+    list-style: none;
+  }
+  
+  li {
+    padding: 20px;
+    background-color: white;
+    margin: 0px 2.5% 10px 2.5%;
+    box-shadow: rgba(0, 0, 0, 0.25) 1px 0px 5px;
+    min-height: 100px;
+    /* height: 15vw; */
+    font-size: 0.85rem;
+    color: rgb(114, 114, 114);
+  }
+  
+  .reviews-card__img {
+    grid-area: img;
+    width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
+    justify-self: center;
+    margin-bottom: 5px;
+  }
+  
+  .reviews-card h3 {
+    grid-area: title;
+    text-align: left;
+    margin-left: 10%;
+    color: black;
+  }
+  
+  .reviews-card h3:hover {
+    text-decoration: underline;
+  }
+  
+  .reviews-card {
+    display: grid;
+    grid-template-areas: 'img title title' 'meta . votes' 'date . votes';
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 20% 1fr 1fr;
+  }
+  
+  .reviews-card__date {
+    grid-area: date;
+  }
+  
+  .reviews-card__votes {
+    grid-area: votes;
+    font-size: 1rem;
+    text-align: end;
+  }
+  
+  .votesCount {
+    color: black;
+    font-size: 2rem;
+  }
+  
+  .category-title {
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    color: black;
+  }
+  
+  .singleReview-card {
+    list-style: none;
+    /* display: 'grid';
+    grid-template-areas: 
+    'title title votes' 
+    'userDetails . gameDetails' 
+    'img img img' 
+    'body body body'; */
+  }
+  .singleReview-card h2 {
+    grid-area: title;
+    color:rgb(26, 26, 26)
+  }
+  .singleReview-card__votes {
+    grid-area: votes;
+  }
+  .singleReview-card__img {
+    grid-area: img;
+    width: 100%;
+    margin: 1rem 0 1rem 0;  
+  }
+  
+  .commentsSection {
+    list-style: none;
+  }
+  .commentsSection h3 {
+    padding-bottom: 5px;
+    border-bottom: 1px solid lightgrey;
+  }
+  
+  .oneComment {
+    display: grid;
+    grid-template-areas: 'details votes' 'body votes';
+    border-bottom: 1px solid whitesmoke;
+    padding: 10px 0 10px 0;
+    text-align: left;
+  }
+  .oneComment__nameDate {
+    grid-area: details;
+    font-size: 0.75rem;
+    margin-bottom: 5px;
+  }
+  .oneComment__body {
+    grid-area: body;
+  }
+  .onceComment__votes {
+    grid-area: votes;
+  }
+  
+  .createReview-card {
+    list-style: none;
+  }
+  .createReview-card h2 {
+    /* grid-area: title; */
+    color:rgb(26, 26, 26);
+    margin-bottom: 2px;
+  }
+  .createReview-card p {
+    margin-bottom: 5px;
+  }
+  .createReview-card form {
+    display: block;
+  }
+  .createReview-card input {
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    border-bottom: 1px solid lightgrey;
+    margin-bottom: 2px;
+    color: #333333;
+    text-align: left;
+  }
+  .createReview-card select{
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    /* border-bottom: 1px solid lightgrey; */
+    margin-bottom: 2px;
+    color: lightslategrey;
+    opacity: 0.55;
+  }
+  .createReview-card__body {
+    height:200px;
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    border-bottom: 1px solid lightgrey;
+    border-top: 1px solid lightgrey;
+    margin-bottom: 2px;
+    color: #333333;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    font-size: 0.85rem;
+    resize: none;
+  }
+  .createReview-card ::placeholder {
+    color:lightslategrey;
+  }
+  .createReview-card button {
+    margin-top: 8px;
+    margin-bottom: 4px;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    width: 70px;
+    border-radius: 4px;
+  }
+  .createReview-card__img {
+    grid-area: img;
+    width: 100%;
+    margin: 1rem 0 1rem 0;  
+  }
+  
+
+  .userAccount-card {
+    padding: 0;
+    display: grid;
+    grid-template-areas: 'profile profile' 'details button';
+  }
+  .userAccount-card__profileBox {
+    grid-area: profile;
+    background-color: black;
+    padding: 3% 0 4% 0;
+  }
+  .userAccount-card h1 {
+    color: white;
+    margin-bottom: 10px;
+  }
+  .userAccount-card img {
+    width: 90%;
+  }
+  #accountDetails {
+    grid-area: details;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: left;
+    margin-left: 3%;
+  }
+  #userInfo {
+    color: #111111;
+  }
+  #signOutButton {
+    grid-area: button;
+    text-align: right;
+    justify-content: center;
+  }
+  #signOutButton button {
+    margin: 3%;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    width: 75px;
+    border-radius: 4px;
+  }
+
+  
+  
+  
+  @media screen and (max-width: 600px) {
+    .App {
+      height:100vh;
+      display: grid;
+      grid-template-columns: 1fr 3.5fr;
+      grid-template-rows: 12.5vh 1fr 54px;
+      grid-template-areas: 
+      'acc header'
+      'main-content main-content'
+      'navbar navbar';
+    }
+    
+    .NavBar-container{
+      padding: 8px;
+    }
+  
+    .NavBar-container button {
+      /* float: none; */
+      width: 18%;
+      margin: 0px 0.25rem 0px 0.25rem;
+      padding: 10px 0.25rem 10px 0.25rem;
+    }
+  
+    .userDetails {
+      padding-top: 7%;
+    }
+  }
