--- a/src/App.css
+++ b/src/App.css
@@ -380,8 +380,53 @@
   }
 
 
+  .userAccount-manageContent {
+    list-style: none;
+    padding: 15px;
+  }
+  .userAccount-manageContent h3 {
+    color: #333333;
+    margin-bottom: 3%;
+  }
 
 
+
+  .manageContent-card {
+    padding: 5%;
+    margin: 0 5px 0 5px;
+    border-top: 1px solid whitesmoke;
+    display: grid;
+    grid-template-areas: 'details button' 'details button';
+    grid-template-columns: 60% 40%;
+    align-items: center;
+  }
+  .manageContent-card h4 {
+    color: #333333;
+  }
+  #manageContent-details {
+    grid-area: details;
+    text-align: left;
+  }
+  #manageContent-img {
+    width: 60%;
+    border-radius: 0.5rem;
+    margin-bottom: 5%;
+  }
+  .manageContent-options {
+    grid-area: button;
+    text-align: center;
+  }
+  .manageContent-options button{
+    margin-top: 8px;
+    margin-bottom: 4px;
+    background-color: crimson;
+    border: 1px solid black;
+    color: white;
+    width: 50px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
 
 
   
