implement basic users/:username endpoint

--- a/src/App.css
+++ b/src/App.css
@@ -468,6 +468,13 @@
     background-color: lightgrey;
   }
 
+  #accountLink {
+    color: whitesmoke;
+  }
+  #accountLink:hover {
+    text-decoration: underline;
+  }
+
   
   
   @media screen and (max-width: 600px) {
