--- a/src/App.css
+++ b/src/App.css
@@ -479,6 +479,25 @@
     text-decoration: underline;
   }
 
+  #loadMore h4 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: rgb(201, 201, 201);
+    font-style: italic;
+  }
+  #loadMore button {
+    width: 100%;
+    height: 25px;
+    background-color: transparent;
+    border: 0;
+    color: rgb(201, 201, 201);
+    font-style: italic;
+    cursor: pointer;
+  }
+  #loadMore button:hover {
+    background-color: whitesmoke;
+  }
+
   
   
   @media screen and (max-width: 600px) {
