--- a/src/App.css
+++ b/src/App.css
@@ -498,6 +498,20 @@
     background-color: whitesmoke;
   }
 
+  #expandable {
+    width: 100%;
+    height: 25px;
+    background-color: transparent;
+    border: 0;
+    color: rgb(201, 201, 201);
+    font-style: italic;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  #expandable:hover {
+    background-color: whitesmoke;
+  }
+
   
   
   @media screen and (max-width: 600px) {
