--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
   }
   
   a {
@@ -25,7 +26,7 @@
   
   .AccountButton-container {
     /* border: 5px solid green; */
-    background-color: red;
+    background-color: rgb(0, 181, 241);
     color: white;
     grid-area: acc;
     justify-content: center;
@@ -55,7 +56,7 @@
   
   .Header-container {
     /* border: 5px solid purple; */
-    background-color: red;
+    background-color: rgb(0, 181, 241);
     color: white;
     font-size: 2rem;
     font-weight: bold;
@@ -63,6 +64,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .Header-container p {
+    font-family: 'Erica One', cursive;
+    font-size: 150%;
+    text-shadow: 5px 5px rgb(0, 30, 54);
   }
   
   
@@ -80,7 +87,7 @@
   .NavBar-container button {
     margin-top: 8px;
     margin-bottom: 4px;
-    background-color: black;
+    background-color: rgb(0, 20, 58);
     border: 1px solid black;
     color: white;
     padding: 10px;
@@ -155,6 +162,7 @@
     /* height: 15vw; */
     font-size: 0.85rem;
     color: rgb(114, 114, 114);
+    border-radius: 6px;
   }
 
   #reviewsTitle {
@@ -242,9 +250,10 @@
   
   .oneComment {
     display: grid;
-    grid-template-areas: 'details votes' 'body votes';
+    grid-template-areas: 'details votes' 'body button';
+    grid-template-columns: 8fr 1fr;
     border-bottom: 1px solid whitesmoke;
-    padding: 10px 0 10px 0;
+    padding: 10px 4% 10px 4%;
     text-align: left;
   }
   .oneComment__nameDate {
@@ -256,6 +265,8 @@
     grid-area: body;
   }
   .onceComment__votes {
+    justify-content: center;
+    width: 100%;
     grid-area: votes;
   }
   
@@ -312,13 +323,19 @@
   .createReview-card button {
     margin-top: 8px;
     margin-bottom: 4px;
-    background-color: black;
+    background-color: rgb(0, 20, 58);
     border: 1px solid black;
     color: white;
     padding: 10px;
     cursor: pointer;
     width: 70px;
     border-radius: 4px;
+  }
+  .createReview-card button:hover {
+    background-color: grey;
+  }
+  .createReview-card button:active {
+    background-color: lightgrey;
   }
   .createReview-card__img {
     grid-area: img;
@@ -334,12 +351,14 @@
   }
   .userAccount-card__profileBox {
     grid-area: profile;
-    background-color: black;
+    background-color: rgb(2, 17, 44);
     padding: 3% 0 4% 0;
+    border-radius: 6px 6px 0px 0px;
   }
   .userAccount-card h1 {
     color: white;
     margin-bottom: 10px;
+    font-weight: bolder;
   }
   .userAccount-card img {
     width: 90%;
@@ -362,13 +381,20 @@
   }
   #signOutButton button {
     margin: 3%;
-    background-color: black;
+    background-color: rgb(0, 20, 58);
     border: 1px solid black;
     color: white;
     padding: 10px;
     cursor: pointer;
     width: 75px;
     border-radius: 4px;
+  }
+
+  #signOutButton button:hover {
+    background-color: grey;
+  }
+  #signOutButton button:active {
+    background-color: lightgrey;
   }
 
 
@@ -430,12 +456,12 @@
     margin-top: 8px;
     margin-bottom: 4px;
     background-color: crimson;
-    border: 1px solid black;
+    border: 0px;
     color: white;
     width: 25px;
     height: 25px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 3px;
   }
   .manageContent-options button:hover {
     background-color: red;
@@ -454,22 +480,22 @@
     font-size: 1.2rem;
     color: black;
   }
-  #votesComponent button {
-    background-color: #333333;
-    border: 1px solid black;
+  #upvoteButton, #downvoteButton {
+    background-color: lightgrey;
+    border: 0px;
     color: white;
     font-weight: bold;
     justify-content: center;
     width: 100%;
     padding: 0;
     cursor: pointer;
-    border-radius: 4px;
+    /* border-radius: 4px; */
   }
   #votesComponent button:hover {
-    background-color: grey;
+    background-color: rgb(180, 180, 180);
   }
   #votesComponent button:active {
-    background-color: lightgrey;
+    background-color: rgb(194, 194, 194);
   }
 
   #accountLink {
