--- a/src/App.css
+++ b/src/App.css
@@ -538,7 +538,35 @@
     background-color: whitesmoke;
   }
 
-  
+  .loginButton {
+    padding: 14px 0;
+    width: 100%;
+    background-color: rgb(0, 20, 58);;
+    border: 1px solid black;
+    color: white;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: larger;
+    font-weight: bold;
+  }
+  .loginButton:hover {
+    background-color: grey;
+  }
+  .loginButton:active {
+    background-color: lightgrey;
+  }
+
+  .loginLi {
+    padding: 10px;
+    background-color: white;
+    margin: 0px 2.5% 10px 2.5%;
+    box-shadow: rgba(0, 0, 0, 0.25) 1px 0px 5px;
+    min-height: 50px;
+    /* height: 15vw; */
+    font-size: 0.85rem;
+    color: rgb(114, 114, 114);
+    border-radius: 6px;
+  }
   
   @media screen and (max-width: 600px) {
     .App {
