--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@
   }
   
   .sidebar {
-    border: 5px solid blue;
+    /* border: 5px solid blue; */
     grid-area: sidebar;
     min-width: 250px;
     max-width: 450px;
